--- a/pages/character/character.html
+++ b/pages/character/character.html
@@ -18,8 +18,22 @@
                     <p class="characterShortDescription"></p>
                     <p class="characterDescription"></p> 
                     <div class="buttonBox">
-                        <button class="updateButton"><span class="capitalize">update </span>character</button>    
-                        <button class="deleteButton"><span class="capitalize">delete </span>character</button>    
+                        <button class="updateButton">
+                            <a class="updateButton_link" href="#">
+                                <span class="capitalize">
+                                    update
+                                </span>
+                                character
+                            </a>
+                        </button>  
+                        <button class="deleteButton">
+                            <a class="deleteButton_link" href="#">
+                                <span class="capitalize">
+                                    delete
+                                </span>
+                                character
+                            </a>
+                        </button>  
                     </div>          
                 </article> 
             </ol>
