--- a/pages/createEditDeleteCharacter/createEditDeleteCharacter.html
+++ b/pages/createEditDeleteCharacter/createEditDeleteCharacter.html
@@ -14,19 +14,31 @@
             <ol id="target">
                 <article class="characterVignette">
                     <section class="form">
-                        <ol id="output">
-                           <img src="" alt="characterPhoto" id="photo">
-                        </ol>
-                        <input type="file" id="filepicker" name="fileList"/>
+                        <img src="" alt="characterPhoto" class="imgPreview">
+                        <input type="file" class="filePicker" name="fileList"/>
                         <ul id="listing"></ul>
                         <!--<input class="form_id" type="text" value="1">--> 
-                        <input class="form_name" type="text" value="Name">
+                        <input class="form_name" type="text" value="name">
                         <input class="form_shortDescription" type="text" value="Short description">
                         <input class="form_description" type="text" value="Description">
-                        <div class="form_buttons">
-                            <input class="form_saveSubmit" id="change" type="submit" value="Save changes">
-                            <input class="form_deleteSubmit" id="delete" type="submit" value="Delete changes">
-                        </div>                       
+                        <div class="buttonBox">
+                            <button class="saveButton">
+                                <a class="saveButton_link" href="#">
+                                    <span class="capitalize">
+                                        save
+                                    </span>
+                                    changes
+                                </a>
+                            </button>   
+                            <button class="deleteButton">
+                                <a class="deleteButton_link" href="#">
+                                    <span class="capitalize">
+                                        delete
+                                    </span>
+                                    changes
+                                </a>
+                            </button>      
+                        </div>                        
                     </section>          
                 </article> 
             </ol>
